# attestflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
attestflow/: agent_adapters.py  capabilities.py  capability_adapters.py  ci.py  ci_adapters.py  cli.py  config.py  context.py  evidence.py  gates.py  io.py  locks.py  planner.py  resume.py  runner.py  secrets.py  sessions.py  tasks.py
attestflow/templates/adapters/generic/: README.md
attestflow/templates/base/: harness.yml
attestflow/templates/base/.github/workflows/: ci.yml
attestflow/templates/base/harness/agents/: roles.yml
attestflow/templates/base/harness/gates/: definition_of_ready.yml
docs/contracts/: capability-schema.md  ci-provider-schema.md  evidence-schema.md  planner-output-schema.md  session-adapter-schema.md  task-schema.md
docs/design/: universal-harness.md
docs/superpowers/plans/: 2026-05-29-universal-harness.md
templates/adapters/node/: README.md
templates/adapters/python/: README.md
templates/base/: harness.yml
templates/base/harness/: planner-output.example.json
templates/base/harness/gates/: definition_of_done.yml
templates/base/harness/tasks/ready/: TASK-0001-example.json  TASK-0001-example.yml
tests/bdd/: test_harness_lifecycle.py
tests/unit/: test_agent_adapters.py  test_agent_sessions.py  test_capabilities.py  test_ci_adapters.py  test_ci_provider.py  test_config_and_io.py  test_context.py  test_planner_import.py  test_secret_scan.py  test_task_lifecycle.py
(+2 files in other folders)
